[gd_scene load_steps=20 format=4 uid="uid://bcqltpe3a1fi2"]

[ext_resource type="TileSet" uid="uid://cx31a5mrmu7ri" path="res://assets/tilesets/farm_buildings_tileset.tres" id="1_eqcnc"]
[ext_resource type="Script" uid="uid://p27lk148qw54" path="res://scripts/buildings/Futterhaus.gd" id="1_s3g82"]
[ext_resource type="Texture2D" uid="uid://cohn1pgu6ly3p" path="res://assets/buildings/farm_buildings_all.png" id="2_765h8"]
[ext_resource type="PackedScene" uid="uid://cgv01xlihuvuq" path="res://scenes/ui/scheune/ui_scheune.tscn" id="4_ss63k"]
[ext_resource type="PackedScene" uid="uid://b8j4k2m3n4o5p" path="res://scenes/ui/production/production_ui.tscn" id="5_2y3y5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqcnc"]
size = Vector2(48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_suoog"]
atlas = ExtResource("2_765h8")
region = Rect2(559, 252, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_htfgo"]
atlas = ExtResource("2_765h8")
region = Rect2(575, 252, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iox0"]
atlas = ExtResource("2_765h8")
region = Rect2(591, 252, 16, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_0etvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suoog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htfgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iox0")
}],
"loop": false,
"name": &"door",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_765h8"]
atlas = ExtResource("2_765h8")
region = Rect2(32, 276, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_0etvi"]
atlas = ExtResource("2_765h8")
region = Rect2(48, 276, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa3s8"]
atlas = ExtResource("2_765h8")
region = Rect2(64, 276, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_46d4s"]
atlas = ExtResource("2_765h8")
region = Rect2(80, 276, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbvm0"]
atlas = ExtResource("2_765h8")
region = Rect2(96, 276, 16, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_765h8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_765h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0etvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa3s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46d4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbvm0")
}],
"loop": false,
"name": &"GarageDoor",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_765h8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_suoog"]
radius = 8.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g2wl"]
size = Vector2(40, 32)

[node name="Futterhaus" type="StaticBody2D"]
script = ExtResource("1_s3g82")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+//3/AAAAAA0AAAD+//7/AAAAAA4AAAD+////AAAAAA8AAAD+/wAAAAAAABAAAAD///3/AAABAA0AAAD///7/AAABAA4AAAD/////AAABAA8AAAD//wAAAAABABAAAAAAAP3/AAACAA0AAAAAAP7/AAACAA4AAAAAAP//AAACAA8AAAAAAAAAAAACABAAAAABAP3/AAADAA0AAAABAP7/AAADAA4AAAABAP//AAADAA8AAAABAAAAAAADABAAAAA=")
tile_set = ExtResource("1_eqcnc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_eqcnc")

[node name="Door" type="AnimatedSprite2D" parent="."]
position = Vector2(-8, 6)
sprite_frames = SubResource("SpriteFrames_0etvi")
animation = &"door"
frame_progress = 0.288048

[node name="GarageDoor" type="AnimatedSprite2D" parent="."]
position = Vector2(11, 10)
sprite_frames = SubResource("SpriteFrames_765h8")
animation = &"GarageDoor"

[node name="DoorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(-8, 9)
shape = SubResource("CapsuleShape2D_765h8")

[node name="GarageDoorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarageDoorArea"]
position = Vector2(11, 11)
shape = SubResource("CapsuleShape2D_suoog")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
vertices = PackedVector2Array(-24, -32, 24, -32, 24, 8, -24, 8)

[node name="feedArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="feedArea"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_1g2wl")

<<<<<<< Updated upstream
[node name="inventory_ui_feed" parent="." instance=ExtResource("4_ss63k")]
=======
[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -32.5
offset_right = 77.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="inventory_ui_feed" parent="CanvasLayer/HBoxContainer" instance=ExtResource("4_ss63k")]
>>>>>>> Stashed changes
z_index = 1
offset_left = -96.0
offset_top = -48.0
offset_right = -36.0
offset_bottom = -10.0

[node name="production_ui_feed" parent="." instance=ExtResource("5_2y3y5")]
z_index = 1
offset_left = -32.0
offset_top = -64.0
offset_right = 120.0
offset_bottom = 1.0

[node name="FutterhausLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = -16.0
offset_right = 43.0
offset_bottom = -3.0
text = "Futterhaus verwenden"
